# bugsnag-android-ndk

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  bugsnag-ndk-test.jks  build.gradle  checkstyle.gradle  gradle.properties  install_ndk.sh  ndktest.jks  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bugsnag/android/bugsnagndk/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bugsnag/android/bugsnagndk/: MainActivity.java
app/src/main/jni/: bugsnag.c  bugsnag.h  bugsnag_common.c  bugsnag_error.c  bugsnag_error.h  jni-entry-point.c  jni-entry-point.cpp
app/src/main/jni/headers/: config.h.in  libunwind_i.h
app/src/main/jni/headers/tdep/: libunwind_i.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
bugsnag-android/: build.gradle  settings.gradle
bugsnag-android-ndk/: build.gradle  gradle.properties  settings.gradle
bugsnag-android-ndk-test/: build.gradle  settings.gradle
bugsnag-android-ndk-test/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
bugsnag-android-ndk-test/app/src/main/: AndroidManifest.xml
bugsnag-android-ndk-test/app/src/main/java/com/bugsnag/android/ndk/test/: MainActivity.java
bugsnag-android-ndk-test/app/src/main/jni/: jni entry point.c  jni-entry-point.c  jni-entry-point.cpp
bugsnag-android-ndk-test/app/src/main/res/layout/: activity_main.xml
bugsnag-android-ndk-test/app/src/main/res/values/: strings.xml
bugsnag-android-ndk-test/bugsnag-android-ndk-release/: bugsnag-android-ndk-release.aar  build.gradle
bugsnag-android-ndk-test/bugsnag-android-release/: bugsnag-android-release.aar  build.gradle
bugsnag-android-ndk-testsymbols/: build.gradle  local.properties  settings.gradle
bugsnag-android-ndk-testsymbols/gradle/wrapper/: gradle-wrapper.properties
bugsnag-android-ndk-testsymbols/src/main/java/: BugsnagSoSymbol.java  Main.java  ReadElf.java  SectionHeader.java  Symbol.java
bugsnag-android-ndk-testsymbols/src/main/java/com/bicirikdwarf/dwarf/: Dwarf32Context.java
bugsnag-android-ndk-testsymbols/src/main/java/com/bicirikdwarf/elf/: Elf32Context.java  ElfSymbol.java  Sym.java
bugsnag-android-ndk-testsymbols/src/main/java/dwarf2/: Configuration.java  Dwarf2NameFinder.java  FileLocation.java  RangeMap.java  SectionFinder.java  addr2line.java
bugsnag-android-ndk/ndk/src/main/res/values/: strings.xml
bugsnag-android-ndk/src/main/: AndroidManifest.xml
bugsnag-android-ndk/src/main/java/com/bugsnag/android/ndk/: BugsnagObserver.java  NotifyType.java
bugsnag-android-ndk/src/main/jni/: bugsnag.c  bugsnag.h  bugsnag_error.c  bugsnag_error.h  bugsnag_ndk.c  bugsnag_ndk.h  bugsnag_ndk_report.c  bugsnag_ndk_report.h  bugsnag_unwind.c  bugsnag_unwind.h
bugsnag-android/bugsnagndk/: build.gradle
bugsnag-android/bugsnagndk/src/main/: AndroidManifest.xml
bugsnag-android/bugsnagndk/src/main/jni/: bugsnag.c  bugsnag.h  bugsnag_error.c  bugsnag_error.h
bugsnag-android/bugsnagndk/src/main/jni/headers/: libunwind-coredump.h  libunwind-ptrace.h
bugsnag-android/bugsnagndk/src/main/res/values/: strings.xml
bugsnag-android/example/: build.gradle  proguard.pro
bugsnag-android/example/src/main/: AndroidManifest.xml
bugsnag-android/example/src/main/java/com/bugsnag/android/example/: ExampleActivity.java
bugsnag-android/example/src/main/jni/: example.c
bugsnag-android/example/src/main/res/layout/: main.xml
bugsnag-android/src/main/java/com/bugsnag/android/: Bugsnag.java  Client.java  Configuration.java  Error.java  Exceptions.java  MetaData.java  NativeInterface.java  NotifyType.java
example/: CMakeLists.txt  build.gradle
example/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
example/app/src/main/: AndroidManifest.xml
example/app/src/main/java/com/bugsnag/android/ndk/test/: MainActivity.java
example/app/src/main/jni/: jni entry point.c  report.h
example/src/androidTest/java/com/bugsnag/android/: ExampleTest.java
example/src/main/java/com/bugsnag/android/ndk/test/: MainActivity.java
example/src/main/jni/: jni entry point.c
gradle/wrapper/: gradle-wrapper.properties  gradle-wrapper.properties1
ndk/: CMakeLists.txt  build.gradle
ndk/src/main/: AndroidManifest.xml
ndk/src/main/java/com/bugsnag/android/ndk/: BugsnagObserver.java
ndk/src/main/jni/: bugsnag_ndk_report.c  bugsnag_unwind.c
ndktest/app/: build.gradle
ndktest/app/src/main/jni/: bugsnag.c  jni-entry-point.c
ndktest/app/src/main/jni/headers/: config.h
ndktest/app/src/main/res/layout/: activity_main.xml
ndktest/app/src/test/java/com/bugsnag/android/bugsnagndk/: ExampleUnitTest.java
ndktest/gradle/wrapper/: gradle-wrapper.properties
src/main/jni/: bugsnag_ndk.c  bugsnag_ndk.h  bugsnag_unwind.c
